--- a/Sjuklöner/Views/CollectiveAgreements/Index.cshtml
+++ b/Sjuklöner/Views/CollectiveAgreements/Index.cshtml
@@ -19,7 +19,7 @@
     <hr class="claim-divider" />
     <p class="collective-agreement-header">@Model.CollectiveAgreementHeader[i].Name</p>
     <div class="row">
-        <div class="col col-md-1">
+        <div class="col-left-margin-6 col col-md-1">
             @Html.ActionLink("Ny period", "Create", new { id = Model.CollectiveAgreementHeader[i].Id }, new { @class = "btn btn-primary btn-primary-small" })
         </div>
         <div class="col col-md-1">
