--- a/Sjuklöner/Views/Account/Login.cshtml
+++ b/Sjuklöner/Views/Account/Login.cshtml
@@ -47,10 +47,9 @@
             </div>
             <br>
             <br>
-            <br>
             <div class="form-group">
                 <p class="col-md-offset-2 col-md-10">
-                    @Html.ActionLink("Registrera ett nytt bolag", "Register")
+                    @Html.ActionLink("Registrera ombud och assistansbolag", "Register")
                 </p>
             </div>
             @*Enable this once you have account confirmation enabled for password reset functionality
