--- a/Sjuklöner/Views/Account/NewAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/NewAdmOff.cshtml
@@ -12,7 +12,7 @@
         <p class="page-header7 col col-md-10">Lägg till handläggare</p>
     </div>
     <hr class="claim-divider" />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
     <div class="form-group">
         @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
