--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -22,14 +22,14 @@
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
             <div class="col col-md-4">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
         <div>
             @Html.LabelFor(model => model.HourlySalary, htmlAttributes: new { @class = "control-label col col-md-3 display-right-align3" })
             <div class="col col-md-2">
                 @Html.EditorFor(model => model.HourlySalary, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HourlySalary, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.HourlySalary, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
     </div>
@@ -38,14 +38,14 @@
             @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
         <div>
             @Html.LabelFor(model => model.HolidayPayRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
             <div class="col-md-2">
                 @Html.EditorFor(model => model.HolidayPayRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HolidayPayRate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.HolidayPayRate, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
     </div>
@@ -54,14 +54,14 @@
             @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.AssistantSSN, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
         <div>
             @Html.LabelFor(model => model.PayrollTaxRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
             <div class="col-md-2">
                 @Html.EditorFor(model => model.PayrollTaxRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PayrollTaxRate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PayrollTaxRate, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
     </div>
@@ -70,14 +70,14 @@
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
         <div>
             @Html.LabelFor(model => model.PensionAndInsuranceRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
             <div class="col-md-2">
                 @Html.EditorFor(model => model.PensionAndInsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
             @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
     </div>
