--- a/Sjuklöner/Views/Assistants/Edit.cshtml
+++ b/Sjuklöner/Views/Assistants/Edit.cshtml
@@ -16,14 +16,14 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -31,7 +31,7 @@
             @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -39,7 +39,7 @@
             @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AssistantSSN, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -47,7 +47,7 @@
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -55,7 +55,7 @@
             @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             @Html.LabelFor(model => model.HourlySalary, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HourlySalary, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HourlySalary, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.HourlySalary, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -71,7 +71,7 @@
             @Html.LabelFor(model => model.HolidayPayRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HolidayPayRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HolidayPayRate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.HolidayPayRate, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -79,7 +79,7 @@
             @Html.LabelFor(model => model.PayrollTaxRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PayrollTaxRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PayrollTaxRate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PayrollTaxRate, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -87,7 +87,7 @@
             @Html.LabelFor(model => model.PensionAndInsuranceRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PensionAndInsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
