--- a/Sjuklöner/Views/CareCompanies/Create.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Create.cshtml
@@ -12,12 +12,12 @@
     
     <div class="form-horizontal">
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
         <div class="form-group">
             @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -25,7 +25,7 @@
             @Html.LabelFor(model => model.OrganisationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -33,7 +33,7 @@
             @Html.LabelFor(model => model.StreetAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.StreetAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StreetAddress, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.StreetAddress, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -41,7 +41,7 @@
             @Html.LabelFor(model => model.Postcode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Postcode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Postcode, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Postcode, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -49,7 +49,7 @@
             @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -57,7 +57,7 @@
             @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -65,7 +65,7 @@
             @Html.LabelFor(model => model.CompanyPhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CompanyPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyPhoneNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CompanyPhoneNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -73,7 +73,7 @@
             @Html.LabelFor(model => model.SelectedCollectiveAgreementId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SelectedCollectiveAgreementId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SelectedCollectiveAgreementId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.SelectedCollectiveAgreementId, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -81,7 +81,7 @@
             @Html.LabelFor(model => model.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
