--- a/Sjuklöner/Views/CareCompanies/Edit.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Edit.cshtml
@@ -16,7 +16,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
         @Html.HiddenFor(model => model.CareCompany.Id)
         @Html.HiddenFor(model => model.CareCompanyId)
 
@@ -24,7 +24,7 @@
             @Html.LabelFor(model => model.CareCompany.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.CompanyName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.CompanyName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             @Html.LabelFor(model => model.CareCompany.OrganisationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.OrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.OrganisationNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.OrganisationNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -40,7 +40,7 @@
             @Html.LabelFor(model => model.CareCompany.StreetAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.StreetAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.StreetAddress, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.StreetAddress, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -48,7 +48,7 @@
             @Html.LabelFor(model => model.CareCompany.Postcode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.Postcode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.Postcode, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.Postcode, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -56,7 +56,7 @@
             @Html.LabelFor(model => model.CareCompany.City, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.City, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.City, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -64,7 +64,7 @@
             @Html.LabelFor(model => model.CareCompany.AccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.AccountNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.AccountNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -72,7 +72,7 @@
             @Html.LabelFor(model => model.CareCompany.CompanyPhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.CompanyPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.CompanyPhoneNumber, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.CompanyPhoneNumber, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -80,7 +80,7 @@
             @Html.LabelFor(model => model.CollectiveAgreement, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.CareCompany.SelectedCollectiveAgreementId, new SelectList(@Model.CollectiveAgreement, "Value", "Text", Model.CareCompany.SelectedCollectiveAgreementId), new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CollectiveAgreement, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CollectiveAgreement, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
@@ -88,7 +88,7 @@
             @Html.LabelFor(model => model.CareCompany.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CareCompany.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CareCompany.CollectiveAgreementSpecName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CareCompany.CollectiveAgreementSpecName, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
 
