--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -36,14 +36,14 @@
     <div class="row">
         @*<div class="form-horizontal">*@
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
 
         @*ORGANISATIONNUMBER NEEDED IN DEMO MODE!!!
                 <div class="form-group">
                 @Html.LabelFor(model => model.OrganisationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10 align-bottom1">
                     @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { placeholder = "", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>*@
         <div class="row row-padding2">
@@ -51,14 +51,14 @@
                 @Html.LabelFor(model => model.CustomerName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
                 <div class="col col-md-4">
                     @Html.EditorFor(model => model.CustomerName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerName, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CustomerName, "", new { @class = "text-danger font-size-11 font-size-11" })
                 </div>
             </div>
             <div>
                 @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
         </div>
@@ -67,16 +67,16 @@
                 @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
                 <div class="col col-md-4">
                     @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
             <div>
                 @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
                 <div class="col-md-4">
                     @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
-                    @*@Html.ValidationMessageFor(model => model.SelectedSubAssistantId, "", new { @class = "text-danger" })*@
-                    @*@Html.ValidationMessage("SelectedSubAssistantId", "Ingen vald", new { @class = "text-danger" })*@
-                    @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger" })
+                    @*@Html.ValidationMessageFor(model => model.SelectedSubAssistantId, "", new { @class = "text-danger font-size-11" })*@
+                    @*@Html.ValidationMessage("SelectedSubAssistantId", "Ingen vald", new { @class = "text-danger font-size-11" })*@
+                    @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
         </div>
@@ -85,14 +85,14 @@
                 @Html.LabelFor(model => model.CustomerAddress, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
                 <div class="col col-md-4">
                     @Html.EditorFor(model => model.CustomerAddress, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerAddress, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CustomerAddress, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
             <div>
                 @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
                 <div class="col-md-4">
                     @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
         </div>
@@ -101,14 +101,14 @@
                 @Html.LabelFor(model => model.CustomerPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
                 <div class="col col-md-4">
                     @Html.EditorFor(model => model.CustomerPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerPhoneNumber, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CustomerPhoneNumber, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
             <div>
                 @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2 display-right-align2" })
                 <div class="col-md-4">
                     @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                 @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>*@
 
