--- a/Sjuklöner/Views/Claims/Create2.cshtml
+++ b/Sjuklöner/Views/Claims/Create2.cshtml
@@ -40,7 +40,7 @@
             <div class="form-horizontal">
                 <div class="row">
 
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
                     <div class="col col-md-2 date-padding date-margin">
                         @for (int i = 0; i < Model.ScheduleRowList.Count(); i++)
                         {
@@ -109,29 +109,24 @@
                                     <div class="row row-height-24 small-row-margin3 line-height-10">
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].Hours, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 hours" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].Hours, null, new { @class = "text-danger font-size-9" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialEvening, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-evening" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialEvening, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialNight, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-night" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialNight, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialWeekend, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-weekend" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialWeekend, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialGrandWeekend, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-grandweekend" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialGrandWeekend, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
 
                                         </div>
                                     </div>
-                                    <div class="row row-height-30 small-row-margin4 no-padding-left">
+                                    <div class="row row-height-30 small-row-margin4 no-padding-left2">
                                         <div class="small-errormessage col-md-nopadding col col-md-2">
                                             @Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].Hours, null, new { @class = "text-danger font-size-11" })
                                         </div>
@@ -176,21 +171,21 @@
                                     <div class="row row-height-24 small-row-margin3 line-height-06">
                                         <div class="col-md-nopadding col col-md-5">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].OnCallDay, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 oncall-day" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallDay, "", new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding oncall-margin col col-md-5">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].OnCallNight, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 oncall-night" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallNight, "", new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
 
                                         </div>
                                     </div>
-                                    <div class="row row-height-30 small-row-margin3 no-padding-left">
-                                        <div class="col-md-nopadding col col-md-5">
+                                    <div class="no-padding-left4 row row-height-30 small-row-margin4">
+                                    @*<div class="row row-height-30 small-row-margin3 no-padding-left2">*@
+                                        <div class="no-padding-left3 small-errormessage2 col-md-nopadding col col-md-5">
+                                        @*<div class="small-errormessage2 col-md-nopadding col col-md-5">*@
                                             @Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallDay, "", new { @class = "text-danger font-size-11" })
                                         </div>
-                                        <div class="col-md-nopadding oncall-margin col col-md-5">
+                                        <div class="no-padding-left5 small-errormessage2 col-md-nopadding col col-md-5">
                                             @Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallNight, "", new { @class = "text-danger font-size-11" })
                                         </div>
                                     </div>
@@ -266,29 +261,24 @@
                                     <div class="row row-height-24 small-row-margin3 line-height-06">
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].HoursSI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 hours-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].HoursSI, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialEveningSI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-evening-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialEveningSI, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialNightSI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-night-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialNightSI, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialWeekendSI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-weekend-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialWeekendSI, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].UnsocialGrandWeekendSI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 unsocial-grandweekend-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].UnsocialGrandWeekendSI, null, new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
 
                                         </div>
                                     </div>
-                                    <div class="row row-height-30 small-row-margin4 no-padding-left">
+                                    <div class="row row-height-30 small-row-margin4 no-padding-left2">
                                         <div class="small-errormessage col-md-nopadding col col-md-2">
                                             @Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].HoursSI, null, new { @class = "text-danger font-size-11" })
                                         </div>
@@ -333,21 +323,19 @@
                                     <div class="row row-height-24 small-row-margin3 line-height-06">
                                         <div class="col-md-nopadding col col-md-5">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].OnCallDaySI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 oncall-day-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallDaySI, "", new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding oncall-margin col col-md-5">
                                             @Html.EditorFor(modelItem => Model.ScheduleRowList[i].OnCallNightSI, new { htmlAttributes = new { placeholder = "0,00", @class = "form-control small-form-control-time3 low-form-control2 border-radius-1 oncall-night-si" } })
-                                            @*@Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallNightSI, "", new { @class = "text-danger" })*@
                                         </div>
                                         <div class="col-md-nopadding col col-md-2">
 
                                         </div>
                                     </div>
-                                    <div class="row row-height-30 small-row-margin3 no-padding-left">
-                                        <div class="col-md-nopadding col col-md-5">
+                                    <div class="row row-height-30 small-row-margin3 no-padding-left2">
+                                        <div class="col-no-margin-left small-errormessage col-md-nopadding col col-md-5">
                                             @Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallDaySI, "", new { @class = "text-danger font-size-11" })
                                         </div>
-                                        <div class="col-md-nopadding oncall-margin col col-md-5">
+                                        <div class="col-no-margin-left small-errormessage col-md-nopadding oncall-margin col col-md-5">
                                             @Html.ValidationMessageFor(modelItem => Model.ScheduleRowList[i].OnCallNightSI, "", new { @class = "text-danger font-size-11" })
                                         </div>
                                     </div>
