--- a/Sjuklöner/Views/Claims/Create3.cshtml
+++ b/Sjuklöner/Views/Claims/Create3.cshtml
@@ -36,12 +36,12 @@
 
     <div class="row">
         <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
             <div class="form-group">
                 @Html.LabelFor(model => model.SickPay, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.SickPay, new { htmlAttributes = new { @class = "form-control", @placeholder = "00,00", id = "sickpay", onchange = "calculateSum()", onblur = "calculateSum()" } })
-                    @Html.ValidationMessageFor(model => model.SickPay, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.SickPay, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
@@ -49,7 +49,7 @@
                 @Html.LabelFor(model => model.HolidayPay, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.HolidayPay, new { htmlAttributes = new { @class = "form-control", @placeholder = "00,00", id = "holidaypay", onchange = "calculateSum()", onblur = "calculateSum()" } })
-                    @Html.ValidationMessageFor(model => model.HolidayPay, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.HolidayPay, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                 @Html.LabelFor(model => model.SocialFees, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.SocialFees, new { htmlAttributes = new { @class = "form-control", @placeholder = "00,00", id = "socialfees", onchange = "calculateSum()", onblur = "calculateSum()" } })
-                    @Html.ValidationMessageFor(model => model.SocialFees, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.SocialFees, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
@@ -65,7 +65,7 @@
                 @Html.LabelFor(model => model.PensionAndInsurance, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PensionAndInsurance, new { htmlAttributes = new { @class = "form-control align-bottom2", @placeholder = "00,00", id = "pensionandinsurance", onchange = "calculateSum()", onblur = "calculateSum()" } })
-                    @Html.ValidationMessageFor(model => model.PensionAndInsurance, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.PensionAndInsurance, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
                 @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label control-label-large col-md-2" })
                 <div class="col-md-10 align-bottom3 display-large-font1" id="claimamount">
                     @Html.DisplayFor(model => Model.ClaimSum)
-                    @*@Html.ValidationMessageFor(model => model.ClaimSum, "", new { @class = "text-danger" })*@
+                    @*@Html.ValidationMessageFor(model => model.ClaimSum, "", new { @class = "text-danger font-size-11" })*@
                 </div>
             </div>
 
