--- a/Sjuklöner/Views/Manage/AddPhoneNumber.cshtml
+++ b/Sjuklöner/Views/Manage/AddPhoneNumber.cshtml
@@ -10,7 +10,7 @@
     @Html.AntiForgeryToken()
     <h4>Add a phone number</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
     <div class="form-group">
         @Html.LabelFor(m => m.Number, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
