--- a/Sjuklöner/Views/Manage/SetPassword.cshtml
+++ b/Sjuklöner/Views/Manage/SetPassword.cshtml
@@ -15,7 +15,7 @@
 
     <h4>Create Local Login</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
     <div class="form-group">
         @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
