Improved validation in javascript in Create3 and Recommend. Trim on SSN before saving.

--- a/Sjuklöner/Views/Claims/Create3.cshtml
+++ b/Sjuklöner/Views/Claims/Create3.cshtml
@@ -157,7 +157,7 @@
         var extraInt = 0;
 
         var pos = sickPay.search(",");
-        if (pos === -1 || pos === sickPay.length) {
+        if (pos === -1 || pos === sickPay.length - 1) {
             //No comma char in the string or if the comma is the last char
             sickPayInt = parseInt(sickPay);
         }
@@ -167,7 +167,7 @@
         }
 
         pos = holidayPay.search(",");
-        if (pos === -1 || pos === holidayPay.length) {
+        if (pos === -1 || pos === holidayPay.length - 1) {
             //No comma char in the string or if the comma is the last char
             holidayPayInt = parseInt(holidayPay);
         }
@@ -177,7 +177,7 @@
         }
 
         pos = socialFees.search(",");
-        if (pos === -1 || pos === socialFees.length) {
+        if (pos === -1 || pos === socialFees.length - 1) {
             //No comma char in the string or if the comma is the last char
             socialFeesInt = parseInt(socialFees);
         }
@@ -187,7 +187,7 @@
         }
 
         pos = pensionAndInsurance.search(",");
-        if (pos === -1 || pos === pensionAndInsurance.length) {
+        if (pos === -1 || pos === pensionAndInsurance.length - 1) {
             //No comma char in the string or if the comma is the last char
             pensionAndInsuranceInt = parseInt(pensionAndInsurance);
         }
@@ -197,14 +197,16 @@
         }
 
         claimSumDec = sickPayDec + holidayPayDec + socialFeesDec + pensionAndInsuranceDec;
-        if (claimSumDec > 99) {
-            extraInt = parseInt(claimSumDec.toString().substring(0, 1));
-            claimSumDec = parseInt(claimSumDec.toString().substring(1));
+        if (!isNaN(claimSumDec)) {
+            if (claimSumDec > 99) {
+                extraInt = parseInt(claimSumDec.toString().substring(0, 1));
+                claimSumDec = parseInt(claimSumDec.toString().substring(1));
+            }
         }
 
         claimSumInt = sickPayInt + holidayPayInt + socialFeesInt + pensionAndInsuranceInt + extraInt;
 
-        if (isNaN(claimSumInt) || claimSumInt == "" || claimSumInt == null || isNAN(claimSumDec) {
+        if (isNaN(claimSumInt) || isNaN(claimSumDec)) {
             claimSum.innerHTML = "00,00";
         }
         else {
